fix letter spacing

--- a/src/component/Homepage/Judges.scss
+++ b/src/component/Homepage/Judges.scss
@@ -9,7 +9,7 @@
     .card-title {
       font-family: "Butler";
       font-size: 32px;
-      letter-spacing: 20px;
+      // letter-spacing: 20px;
     }
     .card-text {
       font-size: 20px;
